@@ -1,3 +1,7 @@
+2005-06-15  Mark McLoughlin  <markmc@redhat.com>
+
+	* sabayon.spec.in: update
+
 2005-06-14  Mark McLoughlin  <markmc@redhat.com>
 
 	* admin-tool/sessionwindow.py: fix debug spew.
